--- a/app/templates/modules/footer.html
+++ b/app/templates/modules/footer.html
@@ -18,10 +18,10 @@
                     <div class="single_footer_part">
                         <h4>Company</h4>
                         <ul class="list-unstyled">
-                            <li><a href="">About</a></li>
-                            <li><a href="">News</a></li>
-                            <li><a href="">FAQ</a></li>
-                            <li><a href="">Contact</a></li>
+                            <li><a href="">Nguyễn Anh Tuấn</a></li>
+                            <li><a href="">Phạm Ích Dương</a></li>
+                            <li><a href="">Hà Anh Hùng</a></li>
+                            <li><a href="">Lê Minh Hoàng</a></li>
                         </ul>
                     </div>
                 </div>
@@ -29,15 +29,15 @@
                     <div class="single_footer_part">
                         <h4>Address</h4>
                         <ul class="list-unstyled">
-                            <li><a href="#">200, Green block, NewYork</a></li>
-                            <li><a href="#">+10 456 267 1678</a></li>
-                            <li><span>contact89@winter.com</span></li>
+                            <li><a href="#">Đại học công nghệ - Đại học quốc gia Hà Nội</a></li>
+                            <li><a href="#">+84123456789</a></li>
+                            <li><span>group20@gmail.com</span></li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-sm-6 col-lg-4">
                     <div class="single_footer_part">
-                        <h4>Newsletter</h4>
+                        <h4>Contact us</h4>
                         <div id="mc_embed_signup">
                             <form target="_blank"
                                 action=""
