--- a/app/templates/modules/services.html
+++ b/app/templates/modules/services.html
@@ -6,28 +6,28 @@
                 <div class="col-lg-3 col-sm-6">
                     <div class="single_shopping_details">
                         <img src="{% static 'img/icon/icon_1.png' %}" alt="">
-                        <h4>Free shipping</h4>
+                        <h4>Fast Transfer</h4>
                         <p>Divided face for bearing the divide unto seed winged divided light Forth.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="single_shopping_details">
                         <img src="{% static 'img/icon/icon_2.png' %}" alt="">
-                        <h4>Free shipping</h4>
+                        <h4>Free Shipping</h4>
                         <p>Divided face for bearing the divide unto seed winged divided light Forth.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="single_shopping_details">
                         <img src="{% static 'img/icon/icon_3.png' %}" alt="">
-                        <h4>Free shipping</h4>
+                        <h4>Payment With Card</h4>
                         <p>Divided face for bearing the divide unto seed winged divided light Forth.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="single_shopping_details">
                         <img src="{% static 'img/icon/icon_4.png' %}" alt="">
-                        <h4>Free shipping</h4>
+                        <h4>Best Service</h4>
                         <p>Divided face for bearing the divide unto seed winged divided light Forth.</p>
                     </div>
                 </div>
