--- a/app/templates/modules/header.html
+++ b/app/templates/modules/header.html
@@ -15,7 +15,7 @@
                         <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="index.html">Home</a>
+                                    <a class="nav-link" href="{% url 'index' %}">Home</a>
                                 </li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown_1"
@@ -23,8 +23,8 @@
                                         Shop
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown_1">
-                                        <a class="dropdown-item" href="category.html"> shop category</a>
-                                        <a class="dropdown-item" href="single-product.html">product details</a>
+                                        <a class="dropdown-item" href="{% url 'category'  %}"> shop category</a>
+                                        <a class="dropdown-item" href="{% url 'single-product'  %}">product details</a>
                                         
                                     </div>
                                 </li>
@@ -34,15 +34,14 @@
                                         pages
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
-                                        <a class="dropdown-item" href="login.html"> 
+                                        <a class="dropdown-item" href="{% url 'user_login' %}"> 
                                             login
                                             
                                         </a>
-                                        <a class="dropdown-item" href="tracking.html">tracking</a>
-                                        <a class="dropdown-item" href="checkout.html">product checkout</a>
-                                        <a class="dropdown-item" href="cart.html">shopping cart</a>
-                                        <a class="dropdown-item" href="confirmation.html">confirmation</a>
-                                        <a class="dropdown-item" href="elements.html">elements</a>
+                                        <a class="dropdown-item" href="{% url 'tracking' %}">tracking</a>
+                                        <a class="dropdown-item" href="{% url 'checkout' %}">product checkout</a>
+                                        <a class="dropdown-item" href="{% url 'cart' %}">shopping cart</a>
+                                        <a class="dropdown-item" href="{% url 'confirmation' %}">confirmation</a>
                                     </div>
                                 </li>
                                 
@@ -52,13 +51,13 @@
                                         blog
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
-                                        <a class="dropdown-item" href="blog.html"> blog</a>
-                                        <a class="dropdown-item" href="single-blog.html">Single blog</a>
+                                        <a class="dropdown-item" href="{% url 'blog' %}"> blog</a>
+                                        <a class="dropdown-item" href="{% url 'singleblog' %}">Single blog</a>
                                     </div>
                                 </li>
                                 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="contact.html">Contact</a>
+                                    <a class="nav-link" href="{% url 'contact'  %}">Contact</a>
                                 </li>
                             </ul>
                         </div>
@@ -75,6 +74,26 @@
                                 </div> -->
                             </div>
                             <a id="search_1" href="javascript:void(0)"><i class="ti-search"></i></a>
+                            
+                            {% if request.user.is_authenticated %}
+                            {% comment %} <form class="form-inline my-2 my-lg-0" method="POST" action="{% url 'user_logout' %}">
+                                {% csrf_token %}
+                                <a href="">
+                                    <span class="mr-sm-2">{{request.user.username}}</span>
+                                </a>
+                                <input type="submit" class="btn btn-outline-danger my-2 my-sm-0" value="Logout">
+                            </form> {% endcomment %}
+                            <div class="dropdown">
+                                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                   {{request.user.username}}
+                                </button>
+                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                    <a class="dropdown-item" href="#">Information</a>
+                                    <a class="dropdown-item" href="#">Update Profile</a>
+                                    <a class="dropdown-item" href="{% url 'user_logout' %}">Log Out</a>
+                                </div>
+                            </div>
+                            {% endif %}
                         </div>
                     </nav>
                 </div>
