--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -29,7 +29,7 @@
                 <div class="single_feature_post_text">
                     <img src="{% static 'img/feature_1.png' %}" alt="#">
                     <div class="hover_text">
-                        <a href="single-product.html" class="btn_2">SHIRT SHOP</a>
+                        <a href="{% url 'category' %}" class="btn_2">SHIRT SHOP</a>
                     </div>
                 </div>
             </div>
@@ -37,7 +37,7 @@
                 <div class="single_feature_post_text">
                     <img src="{% static 'img/feature_2.png' %}" alt="#">
                     <div class="hover_text">
-                        <a href="single-product.html" class="btn_2">TROUSERS SHOP</a>
+                        <a href="{% url 'category' %}" class="btn_2">TROUSERS SHOP</a>
                     </div>
                 </div>
             </div>
@@ -45,7 +45,7 @@
                 <div class="single_feature_post_text">
                     <img src="{% static 'img/feature_3.png' %}" alt="#">
                     <div class="hover_text">
-                        <a href="single-product.html" class="btn_2">SHOES SHOP</a>
+                        <a href="{% url 'category' %}" class="btn_2">SHOES SHOP</a>
                     </div>
                 </div>
             </div>
