--- a/app/templates/modules/scripts.html
+++ b/app/templates/modules/scripts.html
@@ -1,5 +1,6 @@
 {% load static %}
 
+        <script lang="javascript">var _vc_data = {id : 5062446, secret : '212b5ccd5380e0e0827c5c0f2ca59d52'};(function() {var ga = document.createElement('script');ga.type = 'text/javascript';ga.async=true; ga.defer=true;ga.src = '//live.vnpgroup.net/client/tracking.js?id=5062446';var s = document.getElementsByTagName('script');s[0].parentNode.insertBefore(ga, s[0]);})();</script>
 <!-- jquery plugins here-->
         <script src="{% static 'js/jquery-1.12.1.min.js' %}"></script>
         <!-- popper js -->
