fix contact templates

--- a/app/templates/modules/instagram.html
+++ b/app/templates/modules/instagram.html
@@ -4,26 +4,14 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="instagram_photo_iner">
-                        <div class="single_instgram_photo">
-                            <img src="{% static 'img/instagram/inst_1.png' %}" alt="">
-                            <a href="#"><i class="ti-instagram"></i></a> 
-                        </div>
-                        <div class="single_instgram_photo">
-                            <img src="{% static 'img/instagram/inst_2.png' %}" alt="">
-                            <a href="#"><i class="ti-instagram"></i></a> 
-                        </div>
-                        <div class="single_instgram_photo">
-                            <img src="{% static 'img/instagram/inst_3.png' %}" alt="">
-                            <a href="#"><i class="ti-instagram"></i></a> 
-                        </div>
-                        <div class="single_instgram_photo">
-                            <img src="{% static 'img/instagram/inst_4.png' %}" alt="">
-                            <a href="#"><i class="ti-instagram"></i></a> 
-                        </div>
-                        <div class="single_instgram_photo">
-                            <img src="{% static 'img/instagram/inst_5.png' %}" alt="">
-                            <a href="#"><i class="ti-instagram"></i></a> 
-                        </div>
+                        {% for instagram in instagrams %}
+                            <div class="single_instgram_photo">
+                                <img src="{{instagram.image.url}}" alt="">
+                                <a href="#"><i class="ti-instagram"></i></a> 
+                            </div>
+                        {% endfor %}
+                        
+                        
                         
                     </div>
                 </div>
