--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -76,7 +76,7 @@
           <h2 class="contact-title">Get in Touch</h2>
         </div>
         <div class="col-lg-8">
-          <form class="form-contact contact_form" action="contact_process.php" method="post" id="contactForm"
+          <form class="form-contact contact_form" action="" method="post" id="contactForm"
             novalidate="novalidate">
             <div class="row">
               <div class="col-12">
@@ -115,21 +115,21 @@
           <div class="media contact-info">
             <span class="contact-info__icon"><i class="ti-home"></i></span>
             <div class="media-body">
-              <h3>Buttonwood, California.</h3>
-              <p>Rosemead, CA 91770</p>
+              <h3>Hà Nội, Việt Nam</h3>
+              <p>Số 1 Phạm Văn Đồng</p>
             </div>
           </div>
           <div class="media contact-info">
             <span class="contact-info__icon"><i class="ti-tablet"></i></span>
             <div class="media-body">
-              <h3>00 (440) 9865 562</h3>
-              <p>Mon to Fri 9am to 6pm</p>
+              <h3>0912716024</h3>
+              <p>Mở cửa cả ngày từ thứ 2 đến thứ 7</p>
             </div>
           </div>
           <div class="media contact-info">
             <span class="contact-info__icon"><i class="ti-email"></i></span>
             <div class="media-body">
-              <h3>support@colorlib.com</h3>
+              <h3>admin@admin.com</h3>
               <p>Send us your query anytime!</p>
             </div>
           </div>
