repair messeges error login

--- a/app/templates/modules/header.html
+++ b/app/templates/modules/header.html
@@ -21,7 +21,7 @@
                                     </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown_1">
                                     <a class="dropdown-item" href="{% url 'category'  %}"> shop category</a>
-                                    <a class="dropdown-item" href="{% url 'single-product'  %}">product details</a>
+                                    <a class="dropdown-item" href="{% url 'single-product' 1  %}">product details</a>
 
                                 </div>
                             </li>
