--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,7 +10,7 @@
                             <div class="banner_text_iner">
                                 <h5>Winter Fasion</h5>
                                 <h1>Fashion Collection 2019</h1>
-                                <a href="#" class="btn_1">shop now</a>
+                                <a href="{% url 'category' %}" class="btn_1">shop now</a>
                             </div>
                         </div>
                     </div>
@@ -79,13 +79,14 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="new_arrival_iner filter-container">
-                    <div class="single_arrivel_item weidth_1 mix shoes">
-                        <img src="{% static 'img/arrivel/arrivel_5.png' %}" alt="#">
-                        <div class="hover_text">
-                            <p>Canvas</p>
-                            <a href="single-product.html">
-                                <h3>Lorem Canvas Low-Top Sneaker</h3>
-                            </a>
+                   {% for product in products %}
+                         <div class="single_arrivel_item weidth_3 mix shoes">
+                            <img src="{{product.image.url}}" alt="#">
+                            <div class="hover_text">
+                                <p>{{product.get_category}}</p>
+                                <a href="{% url 'single-product' product.id %}">
+                                    <h3>{{product.name}}</h3>
+                                </a>
                             <div class="rate_icon">
                                 <a href="#"> <i class="fas fa-star"></i> </a>
                                 <a href="#"> <i class="fas fa-star"></i> </a>
@@ -93,118 +94,15 @@
                                 <a href="#"> <i class="fas fa-star"></i> </a>
                                 <a href="#"> <i class="fas fa-star"></i> </a>
                             </div>
-                            <h5>$150</h5>
+                            <h5>${{product.get_absolute_price}}</h5>
                             <div class="social_icon">
                                 <a href="#"><i class="ti-heart"></i></a>
                                 <a href="#"><i class="ti-bag"></i></a>
                             </div>
-                        </div>
-                    </div>
-                    <div class="single_arrivel_item weidth_2 mix women">
-                        <img src="{% static 'img/arrivel/arrivel_2.png' %}" alt="#">
-                        <div class="hover_text">
-                            <p>Canvas</p>
-                            <a href="single-product.html">
-                                <h3>Lorem Canvas Low-Top Sneaker</h3>
-                            </a>
-                            <div class="rate_icon">
-                                <a href="#"> <i class="fas fa-star"></i> </a>
-                                <a href="#"> <i class="fas fa-star"></i> </a>
-                                <a href="#"> <i class="fas fa-star"></i> </a>
-                                <a href="#"> <i class="fas fa-star"></i> </a>
-                                <a href="#"> <i class="fas fa-star"></i> </a>
                             </div>
-                            <h5>$150</h5>
-                            <div class="social_icon">
-                                <a href="#"><i class="ti-heart"></i></a>
-                                <a href="#"><i class="ti-bag"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="single_arrivel_item weidth_3 mix shoes women">
-                        <img src="{% static 'img/arrivel/arrivel_3.png' %}" alt="#">
-                        <div class="hover_text">
-                            <p>Canvas</p>
-                            <a href="single-product.html">
-                                <h3>Lorem Canvas Low-Top Sneaker</h3>
-                            </a>
-                            <div class="rate_icon">
-                                <a href="#"> <i class="fas fa-star"></i> </a>
-                                <a href="#"> <i class="fas fa-star"></i> </a>
-                                <a href="#"> <i class="fas fa-star"></i> </a>
-                                <a href="#"> <i class="fas fa-star"></i> </a>
-                                <a href="#"> <i class="fas fa-star"></i> </a>
-                            </div>
-                            <h5>$150</h5>
-                            <div class="social_icon">
-                                <a href="#"><i class="ti-heart"></i></a>
-                                <a href="#"><i class="ti-bag"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="single_arrivel_item weidth_3 mix women men">
-                        <img src="{% static 'img/arrivel/arrivel_4.png' %}" alt="#">
-                        <div class="hover_text">
-                            <p>Canvas</p>
-                            <a href="single-product.html">
-                                <h3>Lorem Canvas Low-Top Sneaker</h3>
-                            </a>
-                            <div class="rate_icon">
-                                <a href="#"> <i class="fas fa-star"></i> </a>
-                                <a href="#"> <i class="fas fa-star"></i> </a>
-                                <a href="#"> <i class="fas fa-star"></i> </a>
-                                <a href="#"> <i class="fas fa-star"></i> </a>
-                                <a href="#"> <i class="fas fa-star"></i> </a>
-                            </div>
-                            <h5>$150</h5>
-                            <div class="social_icon">
-                                <a href="#"><i class="ti-heart"></i></a>
-                                <a href="#"><i class="ti-bag"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="single_arrivel_item weidth_2 mix men women">
-                        <img src="{% static 'img/arrivel/arrivel_1.png' %}" alt="#">
-                        <div class="hover_text">
-                            <p>Canvas</p>
-                            <a href="single-product.html">
-                                <h3>Lorem Canvas Low-Top Sneaker</h3>
-                            </a>
-                            <div class="rate_icon">
-                                <a href="#"> <i class="fas fa-star"></i> </a>
-                                <a href="#"> <i class="fas fa-star"></i> </a>
-                                <a href="#"> <i class="fas fa-star"></i> </a>
-                                <a href="#"> <i class="fas fa-star"></i> </a>
-                                <a href="#"> <i class="fas fa-star"></i> </a>
-                            </div>
-                            <h5>$150</h5>
-                            <div class="social_icon">
-                                <a href="#"><i class="ti-heart"></i></a>
-                                <a href="#"><i class="ti-bag"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="single_arrivel_item weidth_1 mix shoes men">
-                        <img src="{% static 'img/arrivel/arrivel_6.png' %}" alt="#">
-                        <div class="hover_text">
-                            <p>Canvas</p>
-                            <a href="single-product.html">
-                                <h3>Lorem Canvas Low-Top Sneaker</h3>
-                            </a>
-                            <div class="rate_icon">
-                                <a href="#"> <i class="fas fa-star"></i> </a>
-                                <a href="#"> <i class="fas fa-star"></i> </a>
-                                <a href="#"> <i class="fas fa-star"></i> </a>
-                                <a href="#"> <i class="fas fa-star"></i> </a>
-                                <a href="#"> <i class="fas fa-star"></i> </a>
-                            </div>
-                            <h5>$150</h5>
-                            <div class="social_icon">
-                                <a href="#"><i class="ti-heart"></i></a>
-                                <a href="#"><i class="ti-bag"></i></a>
-                            </div>
-                        </div>
-                    </div>
+                         </div>
+                    
+                   {% endfor %}
                 </div>
             </div>
         </div>
