--- a/app/templates/single-product.html
+++ b/app/templates/single-product.html
@@ -13,7 +13,7 @@
               <div class="col-lg-12">
                   <div class="breadcrumb_iner">
                       <div class="breadcrumb_iner_item">
-                          <p>Home/Shop/Single product</p>
+                          <p><a href="{% url 'index' %}">Home</a>/Shop/<a href="{% url 'single-product' product.id %}">{{product.name}}</a></p>
                       </div>
                   </div>
               </div>
@@ -30,7 +30,7 @@
           <div class="product_slider_img">
             <div id="vertical">
               <div data-thumb="{% static 'img/product_details/prodect_details_1.png' %}">
-                <img src="{% static 'img/product_details/prodect_details_1.png' %}" />
+                <img src="{{product.image.url}}" />
               </div>
               
             </div>
@@ -38,19 +38,19 @@
         </div>
         <div class="col-lg-5 offset-lg-1">
           <div class="s_product_text">
-            <h3>Faded SkyBlu Denim Jeans</h3>
-            <h2>$149.99</h2>
+            <h3>{{product.name}}</h3>
+            <h2>${{product.get_absolute_price}}</h2>
             <ul class="list">
               <li>
                 <a class="active" href="#">
-                  <span>Category</span> : Household</a>
+                  <span>Category</span> : {{product.get_category}}</a>
               </li>
               <li>
-                <a href="#"> <span>Availibility</span> : In Stock</a>
+                <a href="#"> <span>Quantity</span> : {{product.quantity_in_stock}}</a>
               </li>
             </ul>
             <p>
-                Mill Oil is an innovative oil filled radiator with the most modern technology. If you are looking for something that can make your interior look awesome, and at the same time.
+                {{product.introduction}}
             </p>
             <div class="card_area">
               <div class="product_count d-inline-block">
@@ -63,9 +63,9 @@
                   <a href="#" class="like_us"> <i class="ti-heart"></i> </a>
               </div>
               <div class="social_icon">
-                  <a href="#" class="fb"><i class="ti-facebook"></i></a>
-                  <a href="#" class="tw"><i class="ti-twitter-alt"></i></a>
-                  <a href="#" class="li"><i class="ti-linkedin"></i></a>
+                  <a href="https://www.adidas.com.vn/vi/giay-ultraboost-20/EG0692.html" class="fb"><i class="ti-facebook"></i></a>
+                  <a href="https://www.adidas.com.vn/vi/giay-ultraboost-20/EG0692.html" class="tw"><i class="ti-twitter-alt"></i></a>
+                  <a href="https://www.adidas.com.vn/vi/giay-ultraboost-20/EG0692.html" class="li"><i class="ti-linkedin"></i></a>
               </div>
             </div>
           </div>
@@ -99,33 +99,7 @@
       <div class="tab-content" id="myTabContent">
         <div class="tab-pane fade" id="home" role="tabpanel" aria-labelledby="home-tab">
           <p>
-            Beryl Cook is one of Britain’s most talented and amusing artists
-            .Beryl’s pictures feature women of all shapes and sizes enjoying
-            themselves .Born between the two world wars, Beryl Cook eventually
-            left Kendrick School in Reading at the age of 15, where she went
-            to secretarial school and then into an insurance office. After
-            moving to London and then Hampton, she eventually married her next
-            door neighbour from Reading, John Cook. He was an officer in the
-            Merchant Navy and after he left the sea in 1956, they bought a pub
-            for a year before John took a job in Southern Rhodesia with a
-            motor company. Beryl bought their young son a box of watercolours,
-            and when showing him how to use it, she decided that she herself
-            quite enjoyed painting. John subsequently bought her a child’s
-            painting set for her birthday and it was with this that she
-            produced her first significant work, a half-length portrait of a
-            dark-skinned lady with a vacant expression and large drooping
-            breasts. It was aptly named ‘Hangover’ by Beryl’s husband and
-          </p>
-          <p>
-            It is often frustrating to attempt to plan meals that are designed
-            for one. Despite this fact, we are seeing more and more recipe
-            books and Internet websites that are dedicated to the act of
-            cooking for one. Divorce and the death of spouses or grown
-            children leaving for college are all reasons that someone
-            accustomed to cooking for more than one would suddenly need to
-            learn how to adjust all the cooking practices utilized before into
-            a streamlined plan of cooking that is more efficient for one
-            person creating less
+            {{product.description}}
           </p>
         </div>
         <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
@@ -500,74 +474,26 @@
         </div>
       </div>
       <div class="row">
-          <div class="col-lg-3 col-sm-6">
-              <div class="single_category_product">
-                  <div class="single_category_img">
-                      <img src="{% static 'img/category/category_2.png' %}" alt="">
-                      <div class="category_social_icon">
-                          <ul>
-                              <li><a href="#"><i class="ti-heart"></i></a></li>
-                              <li><a href="#"><i class="ti-bag"></i></a></li>
-                          </ul>
-                      </div>
-                      <div class="category_product_text">
-                          <a href="single-product.html"><h5>Long Sleeve TShirt</h5></a>
-                          <p>$150.00</p>
-                      </div>
-                  </div>
-              </div>
-          </div>
-          <div class="col-lg-3 col-sm-6">
-              <div class="single_category_product">
-                  <div class="single_category_img">
-                      <img src="{% static 'img/category/category_3.png' %}" alt="">
-                      <div class="category_social_icon">
-                          <ul>
-                              <li><a href="#"><i class="ti-heart"></i></a></li>
-                              <li><a href="#"><i class="ti-bag"></i></a></li>
-                          </ul>
-                      </div>
-                      <div class="category_product_text">
-                          <a href="single-product.html"><h5>Long Sleeve TShirt</h5></a>
-                          <p>$150.00</p>
-                      </div>
-                  </div>
-              </div>
-          </div>
-          <div class="col-lg-3 col-sm-6">
-              <div class="single_category_product">
-                  <div class="single_category_img">
-                      <img src="{% static 'img/category/category_4.png' %}" alt="">
-                      <div class="category_social_icon">
-                          <ul>
-                              <li><a href="#"><i class="ti-heart"></i></a></li>
-                              <li><a href="#"><i class="ti-bag"></i></a></li>
-                          </ul>
-                      </div>
-                      <div class="category_product_text">
-                          <a href="single-product.html"><h5>Long Sleeve TShirt</h5></a>
-                          <p>$150.00</p>
-                      </div>
-                  </div>
-              </div>
-          </div>
-          <div class="col-lg-3 col-sm-6">
-              <div class="single_category_product">
-                  <div class="single_category_img">
-                      <img src="{% static 'img/category/category_5.png' %}" alt="">
-                      <div class="category_social_icon">
-                          <ul>
-                              <li><a href="#"><i class="ti-heart"></i></a></li>
-                              <li><a href="#"><i class="ti-bag"></i></a></li>
-                          </ul>
-                      </div>
-                      <div class="category_product_text">
-                          <a href="single-product.html"><h5>Long Sleeve TShirt</h5></a>
-                          <p>$150.00</p>
-                      </div>
-                  </div>
-              </div>
-          </div>
+          {% for product_sale in best_seller %}
+                <div class="col-lg-3 col-sm-6">
+                <div class="single_category_product">
+                    <div class="single_category_img">
+                        <img src="{{product_sale.image.url}}" alt="">
+                        <div class="category_social_icon">
+                            <ul>
+                                <li><a href="#"><i class="ti-heart"></i></a></li>
+                                <li><a href="#"><i class="ti-bag"></i></a></li>
+                            </ul>
+                        </div>
+                        <div class="category_product_text">
+                            <a href="single-product.html"><h5>{{product_sale.name}}</h5></a>
+                              <p>${{product_sale.get_absolute_price}}</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+          {% endfor %}
+          
       </div>
     </div>
   </section>
