repair messeges error login

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -61,7 +61,7 @@ Login
                                     </div>
                                     <input type="hidden" name="next" value="{{ request.path }}">
                                     <button type="submit" value="submit" class="btn-primary btn btn-block mt-3 mb-3">
-                                        log in
+                                        Log in
                                     </button>
                                     <a class="lost_pass" href="#">forget password?</a>
                                 </div>
