repair messeges error login

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -94,6 +94,7 @@
                                 <a href="#"> <i class="fas fa-star"></i> </a>
                                 <a href="#"> <i class="fas fa-star"></i> </a>
                             </div>
+                            <h6 style="margin:0;padding:0;font-size:1.4rem;"><del style="color:black;">${{product.price}}</del></h6>
                             <h5>${{product.get_absolute_price}}</h5>
                             <div class="social_icon">
                                 <a href="#"><i class="ti-heart"></i></a>
