--- a/app/templates/single-product.html
+++ b/app/templates/single-product.html
@@ -38,7 +38,8 @@
         </div>
         <div class="col-lg-5 offset-lg-1">
           <div class="s_product_text">
-            <h3>{{product.name}}</h3>
+            <h3 style="font-size: 35px;">{{product.name}}</h3>
+            <h6 style="font-size:1.4rem;"><del style="color:#715f5f;">${{product.price}}</del></h6>
             <h2>${{product.get_absolute_price}}</h2>
             <ul class="list">
               <li>
